2003-01-12  Sam Steingold  <sds@gnu.org>

	* spvw_typealloc.d (reallocate_small_string): do not create the
	hole (and do not plug it) because both this object and the
	possible hole/plug will be collected during the next GC

2003-01-09  John  Hinsdale <hin@alma.com>

	* modules/fastcgi/*: new add-in module for FastCGI interface

2003-01-09  Sam Steingold  <sds@gnu.org>

	implemented CHANGE-CLASS and UPDATE-INSTANCE-FOR-DIFFERENT-CLASS
	* clos.lisp (change-class, update-instance-for-different-class):
	implemented
	* init.lisp (change-class, update-instance-for-different-class):
	export
	* constsym.d, subr.d (pchange_class): added
	* lispbibl.d (Rectype_realloc_Instance): new record type
	(instance_un_realloc): new macro
	(instancep): handle Rectype_realloc_Instance
	(instanceof): make into a function and call instance_un_realloc()
	(case_Rectype_Instance_above): include Rectype_realloc_Instance
	* hashtabl.d (sxhash_atom): un_realloc instances
	* predtype.d (TYPE-OF, CLASS-OF): ditto
	* spvw_garcol.d (GC_MARK, down_record): ditto
	* io.d (pr_orecord): handle Rectype_realloc_Instance
	* record.d (class_of, ptr_to_slot): make into a function and call
	instance_un_realloc()
	(%CHANGE-CLASS): implemented

2003-01-08  Sam Steingold  <sds@gnu.org>

	* stream.d (GENERIC-STREAM-P, BUILT-IN-STREAM-OPEN-P)
	(INPUT-STREAM-P, OUTPUT-STREAM-P, STREAM-ELEMENT-TYPE-EQ):
	use VALUES_IF

2003-01-06  Sam Steingold  <sds@gnu.org>

	some more work on MT: added stubs for functions,
	WITH-TIMEOUT almost works
	* zthread.d: new file - for the actual functions implementations
	(CALL-WITH-TIMEOUT): almost works
	* thread.lisp: renamed threads to processes to comply with CMUCL &c
	(WITH-TIMEOUT): use CALL-WITH-TIMEOUT
	* subr.d, constsym.d [MULTITHREAD]: added thread functions
	* makemake.in: added zthread.d
	* stream.d (sec_usec): made global for use in zthread.d
	* lispbibl.d (current_thread): made static (compiles with -g now)
	* xthread.d (xcondition_timedwait, xthread_cancel): added
